--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/ErrorTemplate.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/ErrorTemplate.scala.html
@@ -15,10 +15,11 @@
  *@
 
 @import uk.gov.hmrc.govukfrontend.views.html.components.Text
+@import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
 
 @this(layout: Layout)
 
-@(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages)
+@(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
 @layout(pageTitle = Some(pageTitle)) {
     <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
