--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FullWidthLayout.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FullWidthLayout.scala.html
@@ -1,4 +1,4 @@
-/*
+@*
  * Copyright 2025 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
@@ -12,17 +12,14 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package uk.gov.hmrc.ngrpropertylinkingfrontend.config
+@this()
 
-import com.google.inject.AbstractModule
-import uk.gov.hmrc.ngrpropertylinkingfrontend.actions.{AuthRetrievals, AuthRetrievalsImpl}
+@(contentBlock: Html)
 
-class Module extends AbstractModule {
-
-  override def configure(): Unit = {
-    bind(classOf[AuthRetrievals]).to(classOf[AuthRetrievalsImpl]).asEagerSingleton()
-    bind(classOf[AppConfig]).asEagerSingleton()
-  }
-}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    @contentBlock
+  </div>
+</div>
