--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/saveAndContinueButton.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/saveAndContinueButton.scala.html
@@ -1,5 +1,5 @@
-/*
- * Copyright 2025 HM Revenue & Customs
+@*
+ * Copyright 2024 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -12,17 +12,20 @@
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
- */
+ *@
 
-package uk.gov.hmrc.ngrpropertylinkingfrontend.config
+@import uk.gov.hmrc.govukfrontend.views.Aliases.{Button, Text}
+@import uk.gov.hmrc.govukfrontend.views.html.components.GovukButton
 
-import com.google.inject.AbstractModule
-import uk.gov.hmrc.ngrpropertylinkingfrontend.actions.{AuthRetrievals, AuthRetrievalsImpl}
+@this(govukButton: GovukButton)
 
-class Module extends AbstractModule {
+@(msg: String, showSaveProgressButton: Boolean = true, isStartButton: Boolean = false)(implicit messages: Messages)
 
-  override def configure(): Unit = {
-    bind(classOf[AuthRetrievals]).to(classOf[AuthRetrievalsImpl]).asEagerSingleton()
-    bind(classOf[AppConfig]).asEagerSingleton()
-  }
-}
+@govukButton(
+ Button(
+  content = Text(messages(msg)),
+  attributes = Map("id" -> "continue"),
+  preventDoubleClick = Some(true),
+  isStartButton = isStartButton
+ )
+)
