--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/Layout.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/Layout.scala.html
@@ -59,7 +59,7 @@ navigationBarContent: Option[NavigationBarContent] = None
     @if(navigationBarContent != None){
         @navBar
     }
-    @if(appConfig.features.welshLanguageSupportEnabled()) {
+    @if(appConfig.welshLanguageSupportEnabled) {
         @languageSelector
     }
     @contentBlock
