--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FullWidthLayout.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FullWidthLayout.scala.html
@@ -14,18 +14,12 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
-@import uk.gov.hmrc.govukfrontend.views.html.components.Text
+@this()
 
-@this(layout: Layout)
+@(contentBlock: Html)
 
-@(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
-
-@layout(pageTitle = Some(pageTitle)) {
-    <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
-    <p class="govuk-body">@{Text(message).asHtml}</p>
-}
-
-@{
-    //$COVERAGE-OFF$
-}
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
+    @contentBlock
+  </div>
+</div>
