--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/LinkComponent.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/LinkComponent.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2025 HM Revenue & Customs
+ * Copyright 2024 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,18 +14,10 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
-@import uk.gov.hmrc.govukfrontend.views.html.components.Text
+@import uk.gov.hmrc.ngrpropertylinkingfrontend.models.components._
+@import uk.gov.hmrc.govukfrontend.views.html.components._
 
-@this(layout: Layout)
-
-@(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
-
-@layout(pageTitle = Some(pageTitle)) {
-    <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
-    <p class="govuk-body">@{Text(message).asHtml}</p>
-}
-
-@{
-    //$COVERAGE-OFF$
-}
+@(link: Link)(implicit messages: Messages)
+<p class="govuk-body">
+    <a href="@link.href.url" class="govuk-link govuk-link--no-visited-state">@messages(link.messageKey)</a>
+</p>
