--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/hyperLinkComponent.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/hyperLinkComponent.scala.html
@@ -14,18 +14,12 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
-@import uk.gov.hmrc.govukfrontend.views.html.components.Text
+@this()
 
-@this(layout: Layout)
+@(label: String, hrefUrl: String, content: String)
 
-@(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
-
-@layout(pageTitle = Some(pageTitle)) {
-    <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
-    <p class="govuk-body">@{Text(message).asHtml}</p>
-}
-
-@{
-    //$COVERAGE-OFF$
-}
+<p class="govuk-body">
+    <a href="@hrefUrl" class="govuk-link">
+        @label
+    </a>&nbsp;@content
+</p>
