--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/saveAndContinueButton.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/components/saveAndContinueButton.scala.html
@@ -1,5 +1,5 @@
 @*
- * Copyright 2025 HM Revenue & Customs
+ * Copyright 2024 HM Revenue & Customs
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -14,18 +14,18 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
-@import uk.gov.hmrc.govukfrontend.views.html.components.Text
+@import uk.gov.hmrc.govukfrontend.views.Aliases.{Button, Text}
+@import uk.gov.hmrc.govukfrontend.views.html.components.GovukButton
 
-@this(layout: Layout)
+@this(govukButton: GovukButton)
 
-@(pageTitle: String, heading: String, message: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
+@(msg: String, showSaveProgressButton: Boolean = true, isStartButton: Boolean = false)(implicit messages: Messages)
 
-@layout(pageTitle = Some(pageTitle)) {
-    <h1 class="govuk-heading-xl">@{Text(heading).asHtml}</h1>
-    <p class="govuk-body">@{Text(message).asHtml}</p>
-}
-
-@{
-    //$COVERAGE-OFF$
-}
+@govukButton(
+ Button(
+  content = Text(messages(msg)),
+  attributes = Map("id" -> "continue"),
+  preventDoubleClick = Some(true),
+  isStartButton = isStartButton
+ )
+)
