NGR-636: adding tests

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/Layout.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/Layout.scala.html
@@ -60,7 +60,7 @@ navigationBarContent: Option[NavigationBarContent] = None
     @if(navigationBarContent != None){
         @navBar
     }
-    @if(appConfig.welshLanguageSupportEnabled) {
+    @if(appConfig.features.welshLanguageSupportEnabled()) {
         @languageSelector
     }
     @contentBlock
