--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/AddPropertyToYourAccountView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/AddPropertyToYourAccountView.scala.html
@@ -29,7 +29,7 @@ saveAndContinueButton: saveAndContinueButton
 
 @heading = @{messages("addpropertyToYourAccount.title")}
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
-@formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.AddPropertyToYourAccountController.submit, Symbol("autoComplete") -> "off") {
+@formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.AddPropertyToYourAccountController.submit(), Symbol("autoComplete") -> "off") {
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-two-thirds">
         <h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
