--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FindAPropertyView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FindAPropertyView.scala.html
@@ -33,7 +33,7 @@ saveAndContinueButton: saveAndContinueButton
 
 @heading = @{messages("findAProperty.title")}
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
-@formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.FindAPropertyController.submit(), Symbol("autoComplete") -> "off") {
+@formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.FindAPropertyController.submit, Symbol("autoComplete") -> "off") {
 @if(form.errors.nonEmpty) {
 @govukErrorSummary(ErrorSummaryViewModel(form))
 }
