--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
@@ -26,7 +26,8 @@
     formHelper: FormWithCSRF,
     linkComponent: LinkComponent,
     govukPagination : GovukPagination,
-    govukTable : GovukTable
+    govukTable : GovukTable,
+    govukDetails : GovukDetails,
 )
 
 @(navigationBarContent: NavigationBarContent,
@@ -39,6 +40,20 @@
   propertySearchResultTable: Table,
 )(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
+@dropDownContent = {
+    <p class="govuk-body">@messages("singleSearchResultPage.details.content.1")<p>
+    <p class="govuk-body">
+        @messages("singleSearchResultPage.details.content.2") <br>
+        @messages("singleSearchResultPage.details.content.3")
+        <a href= @searchAgainUrl class="govuk-link">@messages("singleSearchResultPage.details.link")</a><p>
+    <p class="govuk-body">
+    <p class="govuk-body">
+        @messages("singleSearchResultPage.details.telephone")<br>
+        <strong>@messages("singleSearchResultPage.details.telephoneNumber")</strong>@messages("singleSearchResultPage.details.england")<br>
+        <strong>@messages("singleSearchResultPage.details.telephoneNumber.welsh")</strong>@messages("singleSearchResultPage.details.wales")<p>
+    </p>
+}
+
 @heading = @{messages("singleSearchResultPage.title", postcode)}
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 <div class="govuk-grid-row">
@@ -46,10 +61,15 @@
         <h1 class="govuk-heading-l">@messages("singleSearchResultPage.title", postcode)</h1>
         <p class="govuk-body">
             Showing <strong>@pageBottom</strong> to <strong>@pageTop</strong> of <strong>@totalProperties</strong> items.
+            <a href= @searchAgainUrl class="govuk-link">@messages("singleSearchResultPage.details.link")</a>
         </p>
-        @linkComponent(label = messages("noResultsFound.search.link"), hrefUrl = searchAgainUrl, beforeLinkContent = messages("noResultsFound.p2"), afterLinkContent = ".")
         @govukTable(propertySearchResultTable)
         @govukPagination(paginationData.toPagination)
+        @govukDetails(Details(
+            id = Some("help-if-you-cannot-find-your-property"),
+            summary = Text(messages("singleSearchResultPage.details.summary")),
+            content = HtmlContent(dropDownContent)
+        ))
     </div>
 </div>
 }
