NGR-1857: Content bugs in SingleSearchResults page & optimize imports

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
@@ -52,6 +52,9 @@
         <strong>@messages("singleSearchResultPage.details.telephoneNumber")</strong>@messages("singleSearchResultPage.details.england")<br>
         <strong>@messages("singleSearchResultPage.details.telephoneNumber.welsh")</strong>@messages("singleSearchResultPage.details.wales")<p>
     </p>
+    <p class="govuk-body">@messages("singleSearchResultPage.details.openTime")<br>
+        <strong>@messages("singleSearchResultPage.details.openDaysAndTime")</strong>
+    </p>
 }
 
 @heading = @{messages("singleSearchResultPage.title", postcode)}
