--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
@@ -45,7 +45,7 @@
     <p class="govuk-body">
         @messages("singleSearchResultPage.details.content.2") <br>
         @messages("singleSearchResultPage.details.content.3")
-        <a href= @searchAgainUrl class="govuk-link">@messages("singleSearchResultPage.details.link")</a><p>
+        <a href= @searchAgainUrl class="govuk-link">@messages("singleSearchResultPage.details.link").</a><p>
     <p class="govuk-body">
     <p class="govuk-body">
         @messages("singleSearchResultPage.details.telephone")<br>
