[NGR-BIG-FIXES] (#13)
* [NGR-BIG-FIXES]

* [NGR-Fixes] also added address to top of the page

* [NGR-FIX] Adding link component

--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/SingleSearchResultView.scala.html
@@ -43,9 +43,13 @@
 @dropDownContent = {
     <p class="govuk-body">@messages("singleSearchResultPage.details.content.1")<p>
     <p class="govuk-body">
-        @messages("singleSearchResultPage.details.content.2") <br>
-        @messages("singleSearchResultPage.details.content.3")
-        <a href= @searchAgainUrl class="govuk-link">@messages("singleSearchResultPage.details.link")</a><p>
+        @linkComponent(
+            label = messages("singleSearchResultPage.details.link"),
+            hrefUrl = searchAgainUrl,
+            beforeLinkContent = messages("singleSearchResultPage.details.content.2"),
+            content = Some(messages("singleSearchResultPage.details.content.3")),
+            afterLinkContent = "."
+        )
     <p class="govuk-body">
     <p class="govuk-body">
         @messages("singleSearchResultPage.details.telephone")<br>
