--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FindAPropertyView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/FindAPropertyView.scala.html
@@ -46,7 +46,7 @@ saveAndContinueButton: saveAndContinueButton
         name  =  "postcode-value",
         label =   messages("findAProperty.postcode.label"),
         isVisible = true,
-        classes = Some("govuk-!-width-one-third govuk-!-font-weight-bold")
+        classes = Some("govuk-!-width-one-third")
         )
         <p class="govuk-body"><a class="govuk-link" href="#">@messages("findAProperty.manual")</a></p>
 
