--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CurrentRatepayerView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/CurrentRatepayerView.scala.html
@@ -31,7 +31,7 @@
   saveAndContinueButton: saveAndContinueButton,
 )
 
-@(navigationBarContent: NavigationBarContent, form: Form[CurrentRatepayerForm], ngrRadio: Radios,  address: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
+@(navigationBarContent: NavigationBarContent, form: Form[CurrentRatepayerForm], ngrRadio: Radios,  address: String, mode: String)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
 @dropDownContent = {
   <p class="govuk-body">@messages("currentRatepayer.details.content.p1")</p>
@@ -52,7 +52,7 @@
 
 @heading = @{messages("currentRatepayer.title")}
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
-@formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.CurrentRatepayerController.submit, Symbol("autoComplete") -> "off") {
+@formHelper(action = uk.gov.hmrc.ngrpropertylinkingfrontend.controllers.routes.CurrentRatepayerController.submit(mode), Symbol("autoComplete") -> "off") {
     @if(form.errors.nonEmpty) {
     @govukErrorSummary(ErrorSummaryViewModel(form))
     }
