--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/AddPropertyRequestSentView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/AddPropertyRequestSentView.scala.html
@@ -18,13 +18,43 @@
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components._
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.models.components.NavigationBarContent
+@import play.twirl.api.HtmlFormat
 
-@this(layout: Layout)
+@this(
+layout: Layout,
+panel: GovukPanel,
+govukSummaryList : GovukSummaryList,
+)
 
-@(navigationBarContent: NavigationBarContent)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
+@(reference: String, summaryList: SummaryList, navigationBarContent: NavigationBarContent)(implicit request: RequestHeader, messages: Messages, appConfig: AppConfig)
 
 @heading = @{messages("addPropertyRequestSent.title")}
 
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
+
+@panel(Panel(
+title = Text(heading),
+content = HtmlContent(HtmlFormat.fill(Seq(
+HtmlFormat.escape(Messages("addPropertyRequestSent.yourReference")),
+HtmlFormat.raw("<br><strong>"),
+ HtmlFormat.escape(reference),
+ HtmlFormat.raw("</strong>")
+)))
+))
+
+<p id="printPage" class="js-visible govuk-body govuk-!-display-none-print">
+ <a href="#" class="govuk-link" data-module="hmrc-print-link">
+  @Messages("addPropertyRequestSent.print")
+ </a>
+</p>
+
+@govukSummaryList(summaryList)
+
+<p class="govuk-body">@Messages("addPropertyRequestSent.p1")</p>
+<h2 class="govuk-heading-m">@Messages("addPropertyRequestSent.h2")</h2>
+<p class="govuk-body">@Messages("addPropertyRequestSent.p2")</p>
+<p class="govuk-body">@Messages("addPropertyRequestSent.p3")</p>
+
+<p class="govuk-body"><a href="">@Messages("addPropertyRequestSent.goHome")</a></p>
 
 }
