--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/AddPropertyRequestSentView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/AddPropertyRequestSentView.scala.html
@@ -55,6 +55,6 @@ HtmlFormat.raw("<br><strong>"),
 <p class="govuk-body">@Messages("addPropertyRequestSent.p2")</p>
 <p class="govuk-body">@Messages("addPropertyRequestSent.p3")</p>
 
-<p class="govuk-body"><a href="">@Messages("addPropertyRequestSent.goHome")</a></p>
+<p class="govuk-body"><a href="@appConfig.ngrDashboardUrl">@Messages("addPropertyRequestSent.goHome")</a></p>
 
 }
