--- a/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRatesBillView.scala.html
+++ b/app/uk/gov/hmrc/ngrpropertylinkingfrontend/views/UploadedBusinessRatesBillView.scala.html
@@ -14,7 +14,6 @@
  * limitations under the License.
  *@
 
-@import uk.gov.hmrc.ngrpropertylinkingfrontend.models.{UpscanInitiateResponse, UploadForm}
 @import uk.gov.hmrc.govukfrontend.views.html.components._
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components._
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.config.AppConfig
@@ -22,25 +21,24 @@
 @import uk.gov.hmrc.ngrpropertylinkingfrontend.views.html.components.LinkComponent
 
 @this(layout: Layout,
-      saveAndContinueButton: saveAndContinueButton,
-      button: components.button
+govukSummaryList : GovukSummaryList,
+saveAndContinueButton: saveAndContinueButton
 )
 
-@(fileName: String, uploadStatus: String, navigationBarContent: NavigationBarContent, searchAgainUrl: String, dashboardUrl: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
+@(navigationBarContent: NavigationBarContent, summaryList: SummaryList, addressFull: String)(implicit request: Request[_], messages: Messages, appConfig: AppConfig)
 
-@heading = @{messages("uploadedBusinessRatesBill.title")}
+@heading = @{messages("uploadBusinessRatesBill.title")}
 @layout(pageTitle = Some(heading), fullWidth = true, navigationBarContent =  Some(navigationBarContent), showBackLink = true) {
 
-    <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds">
-            <h2 class="govuk-caption-l hmrc-caption-l"><span class="govuk-visually-hidden"></span>@messages("uploadBusinessRatesBill.p1")</h2>
-            <h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
-            <p class="govuk-caption-m hmrc-caption-m">
-            @messages("uploadBusinessRatesBill.p2")
-                @{Text(fileName).asHtml}
-                @{Text(uploadStatus).asHtml}
-            </p>
-
-        </div>
+<div class="govuk-grid-row">
+    <div class="govuk-grid-column-two-thirds">
+        <span class="govuk-caption-m">@addressFull</span>
+        <h1 class="govuk-heading-l">@{Text(heading).asHtml}</h1>
+        <p class="govuk-caption-m hmrc-caption-m">
+            @messages("uploadBusinessRatesBill.p1")
+        </p>
+        <p class="govuk-body">@govukSummaryList(summaryList)</p>
+        @saveAndContinueButton(msg = messages("service.continue"), isStartButton = false)
     </div>
+</div>
 }
